--- a/app/templates/statistiky.html
+++ b/app/templates/statistiky.html
@@ -19,7 +19,7 @@ Statistiky |
             <strong>{{ vac_stats[0].sum_2 | format_number }}</strong> lidí oběma dávkami a
             <strong>{{ vac_stats[0].sum_1 | format_number }}</strong> lidí jednou dávkou.
             Celkem bylo podáno <strong>{{ vac_stats[0].sum | format_number }}</strong> dávek.
-            Ve frontě na rezervaci aktuálně čeká <strong>{{ vac_stats[0].fronta | format_number }}</strong> lidí
+            Ve frontě na rezervaci aktuálně čeká <strong>{{ vac_stats[0].fronta | format_number }}</strong> zájemců
             a konkrétní termín má přiděleno <strong>{{ vac_stats[0].termin | format_number }}</strong> lidí.
         </p>
         <h5>Nedovolené zjednodušení</h5>
